--- a/views/layouts/login.ejs
+++ b/views/layouts/login.ejs
@@ -1,1 +1,13 @@
-<!-- Login Layout Here -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TradeByte</title>
+  </head>
+  <body>
+    <h1>Header</h1>
+    <%- body %>
+    <h1>Footer</h1>
+  </body>
+</html>
