--- a/views/layouts/login.ejs
+++ b/views/layouts/login.ejs
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TradeByte</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Header</h1>
-    <%- body %>
-    <h1>Footer</h1>
+    <%- include('../partials/_nav.ejs') %> <%- body %> <%-
+    include('../partials/_footer.ejs') %>
+
+    <script src="javascript/script.js"></script>
   </body>
 </html>
