--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,11 @@
-/* Styles Here */
+/* Main CSS */
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
