--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -6,8 +6,10 @@
     <title>TradeByte</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
+
   <body>
-    <%- body %>
+    <%- include('../partials/_nav.ejs') %> <%- body %> <%-
+    include('../partials/_footer.ejs') %>
 
     <script src="javascript/script.js"></script>
   </body>
