--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,1 +1,7 @@
 <h3>**Portfolio/Dashboard**</h3>
+
+<br />
+
+<a href="/auth/logout" class="" style="margin-top: 5px;">
+  <i class=""></i> Logout
+</a>
