--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,1 +1,7 @@
 <h3>**Login/Landing Page**</h3>
+
+<br />
+
+<a href="/auth/google" class="" style="margin-top: 5px;">
+  <i class="fab fa-google"></i> Login With Google
+</a>
