--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,1 +1,2 @@
-<h2>Footer</h2>
+<p class="flex justify-center align-center mt-3">Made with ❤ by Tradebyte Team</p>
+<p class="flex justify-center align-center mt-3">&copy;Copyright 2020</p>
