Added the profile image in navbar

--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -8,13 +8,15 @@
             <!-- tarde byte heading -->
 
             <h1 class="font-bold uppercase p-4 border-b border-gray-100">
-                <a href="/" class="hover:text-gray-900 tracking-widest border-b-2 border-grey-100 text-3xl pb-2 pt-32">Tradebyte</a>
+                <a href="/"
+                    class="hover:text-gray-900 tracking-widest border-b-2 border-grey-100 text-3xl pb-2 pt-32">Tradebyte</a>
             </h1>
 
             <!-- burger icon for nav bar -->
 
             <div class="px-4 cursor-pointer md:hidden" id="burger">
-                <svg class="w-6 h-6" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24">
+                <svg class="w-6 h-6" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    stroke="currentColor" viewBox="0 0 24 24">
                     <path d="M4 6h16M4 12h16M4 18h16"></path>
                 </svg>
             </div>
@@ -33,14 +35,15 @@
 
                             <img class="mx-20 h-full w-full border-8 box-1" style="border: 10px solid rounded;
                             border-image-source: linear-gradient(45deg, #266FEA, #41D7AA);
-                            border-image-slice: 1;" src="img/profile.jpg" alt=" " />
+                            border-image-slice: 1;" src="images/profile.jpg" alt=" " />
                         </div>
                     </li>
 
                     <!-- trading status -->
 
                     <li class="pb-8 pt-4 py-1">
-                        <a href="# " class="block px-4 flex justify-center bg-green-200 rounded-full text-green-900 text-xl font-bold ml-2"><svg
+                        <a href="# "
+                            class="block px-4 flex justify-center bg-green-200 rounded-full text-green-900 text-xl font-bold ml-2"><svg
                                 class="w-5 ml-2 mr-1 " fill="none" stroke-linecap="round" stroke-linejoin="round"
                                 stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
                                 <path d="M5 13l4 4L19 7"></path>
@@ -51,8 +54,10 @@
 
 
                     <li class="py-1 ">
-                        <a href="# " class="block px-4 flex justify-start border-l-4 border-tempc-400 text-xl font-bold ">
-                            <svg class="w-5 ml-2 mr-1 " fill="none " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 " viewBox="0 0 24 24 " stroke="currentColor ">
+                        <a href="# "
+                            class="block px-4 flex justify-start border-l-4 border-tempc-400 text-xl font-bold ">
+                            <svg class="w-5 ml-2 mr-1 " fill="none " stroke-linecap="round " stroke-linejoin="round "
+                                stroke-width="2 " viewBox="0 0 24 24 " stroke="currentColor ">
                                 <path
                                     d="M4 5a1 1 0 011-1h14a1 1 0 011 1v2a1 1 0 01-1 1H5a1 1 0 01-1-1V5zM4
                         13a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H5a1 1 0 01-1-1v-6zM16 13a1 1 0 011-1h2a1 1 0 011 1v6a1 1 0 01-1 1h-2a1 1 0 01-1-1v-6z ">
@@ -66,7 +71,8 @@
 
                     <li class="py-1 ">
                         <a href="# " class="block px-4 flex justify-start border-l-4 border-white text-xl font-bold ">
-                            <svg class="w-5 ml-2 mr-1 " fill="none " stroke-linecap="round " stroke-linejoin="round " stroke-width="2 " viewBox="0 0 24 24 " stroke="currentColor ">
+                            <svg class="w-5 ml-2 mr-1 " fill="none " stroke-linecap="round " stroke-linejoin="round "
+                                stroke-width="2 " viewBox="0 0 24 24 " stroke="currentColor ">
                                 <path d="M8 14v3m4-3v3m4-3v3M3 21h18M3 10h18M3 7l9-4 9 4M4 10h16v11H4V10z "></path>
                             </svg>
                             <span>Market</span>
@@ -90,7 +96,8 @@
 
             <!-- log out button -->
 
-            <div class="flex justify-center block px-4 ml-8 mr-12 flex bg-gray-200 rounded-md mt-4 text-tempc-400 text-2xl font-bold ml-2 align-bottom">
+            <div
+                class="flex justify-center block px-4 ml-8 mr-12 flex bg-gray-200 rounded-md mt-4 text-tempc-400 text-2xl font-bold ml-2 align-bottom">
                 <svg class="w-6 ml-2 mr-1 " fill="currentColor" viewBox="0 0 20 20">
                     <path fill-rule="evenodd"
                         d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
