--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -27,7 +27,7 @@
 
             <div class="card rounded-full flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl">
                 <div class="flex-shrink-0 w-10 h-10 ">
-                    <img class="w-full h-full " src="img/graph.jpeg " alt=" " />
+                    <img class="w-full h-full " src="images/graph.jpeg" alt=" " />
                 </div>
                 <div class="font-bold text-2xl ml-3 ">
                     <p class="text-gray-900 whitespace-no-wrap ">
@@ -41,7 +41,7 @@
 
             <div class="card rounded-full flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl ">
                 <div class="flex-shrink-0 w-10 h-10 ">
-                    <img class="w-full h-full " src="img/graph.jpeg " alt=" " />
+                    <img class="w-full h-full " src="images/graph.jpeg " alt=" " />
                 </div>
                 <div class="font-bold text-2xl ml-3 ">
                     <p class="text-gray-900 whitespace-no-wrap ">
@@ -55,7 +55,7 @@
 
             <div class="card rounded-full flex items-center h-20 sm:h-20 w-full object-cover px-5  shadow-2xl">
                 <div class="flex-shrink-0 w-10 h-10 ">
-                    <img class="w-full h-full " src="img/graph.jpeg " alt=" " />
+                    <img class="w-full h-full " src="images/graph.jpeg " alt=" " />
                 </div>
                 <div class="font-bold text-2xl ml-3 ">
                     <p class="text-gray-900 whitespace-no-wrap ">
