--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -13,6 +13,7 @@
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>TradeByte</title>
   </head>
