--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -47,7 +47,7 @@
                     <p class="text-gray-900 whitespace-no-wrap ">
                         $40,342.04
                     </p>
-                    <span class="block text-gray-500 text-sm ">Total Portfolio</span>
+                    <span class="block text-gray-500 text-sm ">Profit / Loss</span>
                 </div>
             </div>
 
@@ -61,7 +61,7 @@
                     <p class="text-gray-900 whitespace-no-wrap ">
                         $40,342.04
                     </p>
-                    <span class="block text-gray-500 text-sm ">Total Portfolio</span>
+                    <span class="block text-gray-500 text-sm ">$ Balance</span>
                 </div>
             </div>
 
