--- a/views/transaction.ejs
+++ b/views/transaction.ejs
@@ -6,6 +6,8 @@
     <h2><%= message %></h2>
 <% } %>
 <hr>
+<h2>Your Balance: <%= user.balance%></h2>
+<hr>
 <form action="/transaction/confirm" method="POST">
     <input type="hidden" name="_method" value="PUT">
     <h4>Company Symbol: <input type="text" name="companySymbol" value="<%= data.companySymbol%>"></h4>
