--- a/views/market.ejs
+++ b/views/market.ejs
@@ -19,7 +19,7 @@
             <%- jsonData[i]["Company Name"] %>
           </h2>
           <a href="/view/<%- jsonData[i]["Symbol"] %>">VIEW</a>
-          <a href="/buy/<%- jsonData[i]["Symbol"] %>">BUY</a>
+          <a href="/cart/<%- jsonData[i]["Symbol"] %>">BUY</a>
           <p class="mt-1">$0.00</p>
         </div>
       </div>
