--- a/views/transaction.ejs
+++ b/views/transaction.ejs
@@ -1,20 +1,30 @@
 <h1>Transaction</h1>
 
-<% if(message === "Insufficent Balance") {  %>
-    <h2>Please Add <%= ExtraBalance %> or more to complete the Transaction.</h2>
-<% }  else { %>
-    <h2><%= message %></h2>
+<% if(message === "Insufficent Balance") { %>
+<h2>Please Add <%= ExtraBalance %> or more to complete the Transaction.</h2>
+<% } else { %>
+<h2><%= message %></h2>
 <% } %>
-<hr>
+<hr />
 <h2>Your Balance: <%= user.balance%></h2>
-<hr>
+<hr />
 <form action="/transaction/confirm" method="POST">
-    <input type="hidden" name="_method" value="PUT">
-    <h4>Company Symbol: <input type="text" name="companySymbol" value="<%= data.companySymbol%>"></h4>
-    <h4>Stock Price: <input type="Number" name="stockPrice" value="<%= data.stockPrice%>"></h4>
-    <h4>Number of Stock: <input type="Number" name="noOfStock" value="<%= data.noOfStock%>"></h4>
-    <h4>Total Amount: <input type="Number" name="totalAmount" value="<%= totalAmount%>"></h4>
-    <input type="submit" value="BUY">
+  <input type="hidden" name="_method" value="PUT" />
+  <h4>
+    Company Symbol:
+    <input type="text" name="companySymbol" value="<%= data.companySymbol%>" />
+  </h4>
+  <h4>
+    Stock Price:
+    <input type="Number" name="stockPrice" value="<%= data.stockPrice%>" />
+  </h4>
+  <h4>
+    Number of Stock:
+    <input type="Number" name="noOfStock" value="<%= data.noOfStock%>" />
+  </h4>
+  <h4>
+    Total Amount:
+    <input type="Number" name="totalAmount" value="<%= totalAmount%>" />
+  </h4>
+  <input type="submit" value="BUY" />
 </form>
-
-
