--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
-      integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
     <title>TradeByte</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="grid md:grid-cols-5">
-      <%- include('../partials/_nav.ejs') %> <%- body %>
+        <%- include('../partials/_nav.ejs') %>
+            <%- body %>
     </div>
     <script src="javascript/script.js"></script>
-  </body>
+</body>
+
 </html>
