--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -146,7 +146,7 @@
             clip-rule="evenodd"
           ></path>
         </svg>
-        <a href="/logout">LogOut</a>
+        <a href="/auth/logout">LogOut</a>
       </div>
     </div>
 
