--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -9,8 +9,8 @@
         <a
           href="/"
           class="hover:text-gray-900 tracking-widest border-b-2 border-grey-100 text-3xl pb-2 pt-32"
-          >TRADEBYTE</a
-        >
+          >TRADEBYTE
+        </a>
       </h1>
 
       <!-- burger icon for nav bar -->
@@ -40,13 +40,13 @@
           <li>
             <div class="flex-shrink-0 w-20 h-20 align-bottom">
               <img
-                class="mx-20 h-full w-full border-8 box-1"
+                class="mx-20 h-full w-full border-4 box-1"
                 style="
                   border: 10px solid rounded;
                   border-image-source: linear-gradient(45deg, #266fea, #41d7aa);
                   border-image-slice: 1;
                 "
-                src="images/profile.jpg"
+                src="<%= avatar %> "
                 alt=" "
               />
             </div>
