--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -46,7 +46,7 @@
                   border-image-source: linear-gradient(45deg, #266fea, #41d7aa);
                   border-image-slice: 1;
                 "
-                src="<%= avatar %> "
+                src=""
                 alt=" "
               />
             </div>
