Made the Nav again and enhanced other comp. #33

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,4 +1,4 @@
-<main class="relative px-16 py-6 md:col-span-4 bg-gray-300 ">
+<main class="relative px-16 py-6 md:col-span-4 bg-gray-300 md:pl-64 md:mx-auto">
 
     <!-- header -->
 
