--- a/views/market.ejs
+++ b/views/market.ejs
@@ -1,4 +1,4 @@
-<section class="text-gray-700 body-font md:pl-64 md:mx-auto">
+<section class="text-gray-700 body-font md:ml-64 md:mx-auto">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap -m-4">
       <% for(var i=0; i < jsonData.length; i++) { %>
