Improving View & Cart Sec frontend & view backend

--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <div class="md:flex flex-col md:flex-row md:min-h-screen w-full">
+    <div class="md:flex flex-col bg-gray-300 md:flex-row min-h-screen w-full">
       <%- include('../partials/_nav.ejs') %> <%- body %>
     </div>
     <script src="javascript/script.js"></script>
