--- a/views/addBalance.ejs
+++ b/views/addBalance.ejs
@@ -1,13 +1,14 @@
 <h1>ADD BALANCE</h1>
-
-<form action="/" method="POST" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+<hr>
+<h3>Your Current Balance: <%= user.balance%> </h3>
+<hr>
+<br>
+<form action="/addBalance" method="POST" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
     <div class="mb-4">
-        <label class="block text-gray-700 text-sm font-bold mb-2" "> Add amount </label>
-        <input type=" number " class=" shadow appearance-none border rounded w-full py-2 px-3 text-gray-700
-            leading-tight focus:outline-none focus:shadow-outline " name=" add amount " placeholder=" add amount " >
-    </div>
-    <div class=" bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none
-            focus:shadow-outline " type=" submit " onclick=" addAmount() ">
-      ADD
+        <label class="block text-gray-700 text-sm font-bold mb-2" "> Enter amount </label>
+        <input type="number" class=" shadow appearance-none border rounded w-full py-2 px-3 text-gray-700
+            leading-tight focus:outline-none focus:shadow-outline " name="addAmount" placeholder="amount" >
+        <input type="submit" value="Add" class=" bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none
+            focus:shadow-outline">
     </div>
 </form>
