--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,24 +2,32 @@
 
 html,
 body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    box-sizing: border-box;
+    background-color: rgb(226, 232, 240);
 }
 
 .data-table {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 50px 0 30px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0 30px 0;
 }
 
 .chartjs-container {
-  position: relative;
-  margin: auto;
-  height: 75vh;
-  width: 75vw;
+    position: relative;
+    margin: auto;
+    height: 75vh;
+    width: 75vw;
+}
+
+.symbolicon {
+    font-size: 72px;
+    background: -webkit-linear-gradient(#eee, #333);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
