--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -25,11 +25,11 @@
 
             <!-- card1 -->
 
-            <div class="card rounded-full flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl">
+            <div class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl">
                 <div class="flex-shrink-0 w-10 h-10 ">
                     <img class="w-full h-full " src="images/graph.jpeg" alt=" " />
                 </div>
-                <div class="font-bold text-2xl ml-3 ">
+                <div class="font-bold text-xl xl:text-2xl ml-3 ">
                     <p class="text-gray-900 whitespace-no-wrap ">
                         $40,342.04
                     </p>
@@ -39,13 +39,13 @@
 
             <!-- card 2 -->
 
-            <div class="card rounded-full flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl ">
+            <div class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl ">
                 <div class="flex-shrink-0 w-10 h-10 ">
                     <img class="w-full h-full " src="images/graph.jpeg " alt=" " />
                 </div>
-                <div class="font-bold text-2xl ml-3 ">
+                <div class="font-bold text-xl xl:text-2xl ml-3 justify-center">
                     <p class="text-gray-900 whitespace-no-wrap ">
-                        $40,342.04
+                        $ 40,342.04
                     </p>
                     <span class="block text-gray-500 text-sm ">Profit / Loss</span>
                 </div>
@@ -53,11 +53,11 @@
 
             <!-- card 3 -->
 
-            <div class="card rounded-full flex items-center h-20 sm:h-20 w-full object-cover px-5  shadow-2xl">
+            <div class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5  shadow-2xl">
                 <div class="flex-shrink-0 w-10 h-10 ">
                     <img class="w-full h-full " src="images/graph.jpeg " alt=" " />
                 </div>
-                <div class="font-bold text-2xl ml-3 ">
+                <div class="font-bold text-xl xl:text-2xl ml-3 ">
                     <p class="text-gray-900 whitespace-no-wrap ">
                         $40,342.04
                     </p>
